# C-Ray-Tracer

./: CMakeLists.txt  README.md  parameters.txt
include/: grid2.hpp  image.hpp  mat3f.hpp  plane.hpp  ray.hpp  ray_intersect.hpp  sphere.hpp  timer.hpp  triangle.hpp  triangle.tpp  vec2i.hpp  vec3f.hpp
src/: image.cpp  main.cpp  mat3f.cpp  obj_mesh.cpp  plane.cpp  ray.cpp  ray_intersect.cpp  sphere.cpp  triangle.cpp  vec2i.cpp  vec3f.cpp
